--- a/YDev.Web/Views/Content/Blog.cshtml
+++ b/YDev.Web/Views/Content/Blog.cshtml
@@ -36,7 +36,7 @@
                                         </div>
                                     }
 
-                                    <img width="300" height="177" src="@(string.IsNullOrEmpty(blog.CoverImage) ? "images/ihtiyac_640x426.jpg" : blog.CoverImage.ToImageLink())" alt="@blog.Title">
+                                    <img width="300" height="177" src="@(string.IsNullOrEmpty(blog.CoverImage) ? "images/ihtiyac_640x426.jpg" : blog.CoverImage)" alt="@blog.Title">
                                 </a>
                             </div>
                             <article class="post-content">
