--- a/YDev.Web/Views/Iletisim/Index.cshtml
+++ b/YDev.Web/Views/Iletisim/Index.cshtml
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="row">
                 <div class="cell-7 contact-form fx" data-animate="fadeInLeft" id="contact">
-                    <h3 class="block-head">Get in Touch</h3>
+                    <h3 class="block-head">Bize Yazın</h3>
                     <form class="form-signin cform" method="post" action="php/contact.php" id="cform" autocomplete="on">
                         <mark id="message" style="display: none;"></mark>
                         <div class="form-input">
