--- a/YDev.Admin/Views/Home/Index.cshtml
+++ b/YDev.Admin/Views/Home/Index.cshtml
@@ -50,6 +50,10 @@
                                     }
                                 </select>
                             </div>
+                            <div class="form-group col-md-6">
+                                <label>Slogan</label>
+                                <input class="form-control spinner" value="@Model.Slogan" type="text" id="slogan" placeholder="Hayal nereye ihtiyaç oraya gibi..." />
+                            </div>
                             <div class="form-group col-md-12 right">
                                 <a href="javascript:;" id="ayarlari_kaydet" data-id="@Model.Id" class="btn green">Kaydet</a>
                             </div>
