--- a/YDev.Web/Views/Iletisim/Index.cshtml
+++ b/YDev.Web/Views/Iletisim/Index.cshtml
@@ -19,30 +19,12 @@
     <div class="padd-top-50">
         <div class="container">
             <div class="row">
-                <div class="cell-7 contact-form fx" data-animate="fadeInLeft" id="contact">
-                    <h3 class="block-head">Bize Yazın</h3>
-                    <form class="form-signin cform" method="post" action="php/contact.php" id="cform" autocomplete="on">
-                        <mark id="message" style="display: none;"></mark>
-                        <div class="form-input">
-                            <label>First name<span class="red">*</span></label>
-                            <input type="text" required="required" name="name" id="name">
-                        </div>
-                        <div class="form-input">
-                            <label>Email<span class="red">*</span></label>
-                            <input name="email" type="email" id="email" required="required">
-                        </div>
-                        <div class="form-input">
-                            <label>Phone</label>
-                            <input name="phone" type="text" id="phone">
-                        </div>
-                        <div class="form-input">
-                            <label>Message<span class="red">*</span></label>
-                            <textarea required="required" name="message" cols="40" rows="7" id="messageTxt" spellcheck="true"></textarea>
-                        </div>
-                        <div class="form-input">
-                            <input type="submit" class="btn btn-large main-bg" value="Submit">&nbsp;&nbsp;<input type="reset" class="btn btn-large" value="Reset" id="reset">
-                        </div>
-                    </form>
+                <div class="cell-7">
+                    <div style="position:relative;overflow:hidden;">
+                    <iframe src="https://yandex.com.tr/map-widget/v1/-/CSQHzTlQ" 
+                            width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;">
+                        </iframe>
+                    </div>
                 </div>
                 <div class="cell-5 contact-detalis">
                     <h3 class="block-head">İletişim Detayları</h3>
